// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu /> should render 1`] = `
<div>
  <div
    class="header-menu__MenuSmall-sc-1yxapcf-0 Oasdt"
  >
    <svg
      class="menu-icon"
    />
  </div>
  <ul
    class="header-menu__MenuDefault-sc-1yxapcf-1 fEbyIa"
  />
</div>
`;

exports[`<HeaderMenu /> should render with links 1`] = `
<div>
  <div
    class="header-menu__MenuSmall-sc-1yxapcf-0 Oasdt"
  >
    <svg
      class="menu-icon"
    />
  </div>
  <ul
    class="header-menu__MenuDefault-sc-1yxapcf-1 fEbyIa"
  >
    <li>
      <a
        href="/path1"
      >
        LINK1
      </a>
    </li>
    <li>
      <a
        href="/path2"
      >
        LINK2
      </a>
    </li>
  </ul>
</div>
`;
